feat: improved sensors and type discoverability
